Fix loud enemy sound on mobiles

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 
 body {
     user-select: none;
+    touch-action: none;
     background-color: white;
     position: relative;
 }
@@ -43,6 +44,8 @@ p {
 .score-text {
     transition: all 0.5s;
     font-size: inherit;
+    text-shadow: 0px 0px 3px black;
+    font-family: Arial, sans-serif;
 }
 
 #score-10 {
